--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,15 +13,15 @@
   url = "post"
   weight = 20
 
-[[main]]
-  name = "People"
-  url = "people"
-  weight = 30
+# [[main]]
+#  name = "People"
+#  url = "people"
+#  weight = 30
 
-[[main]]
-  name = "Events"
-  url = "event"
-  weight = 40
+# [[main]]
+#  name = "Events"
+#  url = "event"
+#  weight = 40
 
 # [[main]]
 #  name = "Publications"
