--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,25 +3,27 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-#[[main]]
-#  name = "Home"
-#  url = "/"
-#  weight = 10
-
 [[main]]
-  name = "News"
-  url = "post"
+  name = "Home"
+  url = "/"
+  weight = 10
+  
+[[main]]
+  name = "Members"
+  url = "/#members"
   weight = 20
+
   
 [[main]]
   name = "How it works"
   url = "/#intro"
   weight = 30
-
+  
 [[main]]
-  name = "Members"
-  url = "/#members"
+  name = "News"
+  url = "/#news"
   weight = 40
+
   
 # [[main]]
 #  name = "People"
