--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -25,10 +25,10 @@
   weight = 40
 
   
-# [[main]]
-#  name = "People"
-#  url = "people"
-#  weight = 30
+ [[main]]
+  name = "People"
+  url = "people"
+  weight = 50
 
 # [[main]]
 #  name = "Events"
