--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ title = "Levelling Up"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = ""
+baseurl = "https://www.levellingupscheme.co.uk/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
@@ -98,3 +98,25 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
     path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
   [[module.imports]]
     path = "github.com/wowchemy/wowchemy-hugo-modules/netlify-cms-academic"
+    
+# added based on this answer: https://community.netlify.com/t/i-am-getting-an-error-whenever-i-try-automatic-deployment-with-github/21077/3
+[build]
+  publish = "public"
+  command = "hugo"
+
+[context.production.environment]
+  HUGO_VERSION = "0.79.1"
+  HUGO_ENV = "production"
+  HUGO_ENABLEGITINFO = "true"
+  
+[context.branch-deploy.environment]
+  HUGO_VERSION = "0.79.1"
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.79.1"
+  
+[context.deploy-preview]
+  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
+
+[context.branch-deploy]
+  command = "hugo -b $DEPLOY_PRIME_URL --buildFuture"
