--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -84,7 +84,7 @@ show_related = {post = true, project = true, publication = true, talk = true}
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "tonyhill26@waitrose.com"
+email = ""
 phone = ""
 
 # Address
